@@ -1,4 +1,5 @@
 0.12
+ - Fix CSS processing from Tags::HTML::Page::Begin.
 
 0.11 2023-02-10T22:48:37+01:00
  - Rewrite to new Tags::HTML::Page::Begin@0.16.
